--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -1,3 +1,9 @@
 .landing-container {
-    padding: 2rem;
+    padding: 2rem 0;
+    width: 80rem;
+    margin: 0 auto;
+}
+
+.landing-body {
+    width: 100%;
 }
